--- a/cocktailMaker/View/Base.lproj/Main.storyboard
+++ b/cocktailMaker/View/Base.lproj/Main.storyboard
@@ -22,6 +22,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
                                         <state key="normal" image="Name"/>
                                         <connections>
+                                            <action selector="searchByNameTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qd1-HU-dTj"/>
                                             <segue destination="80R-uU-9if" kind="show" identifier="searchByNameSegue" id="cNu-h5-eYi"/>
                                         </connections>
                                     </button>
@@ -29,6 +30,7 @@
                                         <rect key="frame" x="0.0" y="98" width="320" height="73"/>
                                         <state key="normal" image="Ingredient"/>
                                         <connections>
+                                            <action selector="searchByIngredientTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7R7-o1-tFN"/>
                                             <segue destination="80R-uU-9if" kind="show" identifier="searchByIngredientSegue" id="pJW-yO-XUd"/>
                                         </connections>
                                     </button>
@@ -36,6 +38,7 @@
                                         <rect key="frame" x="0.0" y="196" width="320" height="73"/>
                                         <state key="normal" image="LetterWhite"/>
                                         <connections>
+                                            <action selector="listAllDrinksByLetterTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zA0-Sj-QMQ"/>
                                             <segue destination="80R-uU-9if" kind="show" identifier="listByLetterSegue" id="1JH-3Q-o2m"/>
                                         </connections>
                                     </button>
@@ -43,6 +46,7 @@
                                         <rect key="frame" x="0.0" y="294" width="320" height="72"/>
                                         <state key="normal" image="Random"/>
                                         <connections>
+                                            <action selector="randomCocktailTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1tD-aB-2x5"/>
                                             <segue destination="nVs-Aj-rqM" kind="show" identifier="showDetailSegue" id="y4x-Gq-QuQ"/>
                                         </connections>
                                     </button>
@@ -62,17 +66,22 @@
             </objects>
             <point key="canvasLocation" x="57" y="-173"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Cocktail Table View Controller-->
         <scene sceneID="KB4-os-jY1">
             <objects>
-                <tableViewController id="80R-uU-9if" sceneMemberID="viewController">
+                <tableViewController id="80R-uU-9if" customClass="CocktailTableViewController" customModule="cocktailMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Y0g-3Y-usg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="LGM-JY-hPD">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TitleCell" textLabel="vZF-aJ-9xb" style="IBUITableViewCellStyleDefault" id="xgy-Ir-GSk">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="72" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xgy-Ir-GSk" id="C0T-xM-3hJ">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -98,6 +107,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="yP0-yz-CQb"/>
+                    <connections>
+                        <outlet property="searchBar" destination="Y0g-3Y-usg" id="c3e-fC-aNA"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VFF-HH-Nzw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,7 +126,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Drink Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeF-Q8-gcy">
                                 <rect key="frame" x="0.0" y="88" width="414" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.62352941179999999" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lXk-es-Nxa">
@@ -133,21 +145,21 @@
                                         <constraints>
                                             <constraint firstAttribute="height" priority="750" constant="150" id="Ian-5e-SXm"/>
                                         </constraints>
-                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.62352941179999999" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Instructions" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Mcn-lg-CSE">
                                         <rect key="frame" x="0.0" y="203" width="414" height="315"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.62352941179999999" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.023529411760000001" green="0.1215686275" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="PeF-Q8-gcy" firstAttribute="leading" secondItem="80M-nE-FQy" secondAttribute="leading" id="BvJ-xC-EXo"/>
                             <constraint firstItem="lXk-es-Nxa" firstAttribute="centerX" secondItem="cdV-hN-Oc3" secondAttribute="centerX" id="IrA-UA-MNF"/>
@@ -182,6 +194,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="crN-7n-9j0">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" red="0.62352941176470589" green="0.61568627450980395" blue="0.61960784313725492" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
@@ -197,7 +210,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="y4x-Gq-QuQ"/>
+        <segue reference="vOk-Bd-udO"/>
         <segue reference="1JH-3Q-o2m"/>
     </inferredMetricsTieBreakers>
     <resources>
