--- a/cocktailMaker/View/Base.lproj/Main.storyboard
+++ b/cocktailMaker/View/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Drink Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeF-Q8-gcy">
                                 <rect key="frame" x="0.0" y="88" width="414" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <color key="textColor" red="0.62352941179999999" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lXk-es-Nxa">
@@ -136,23 +136,23 @@
                                     <constraint firstAttribute="width" secondItem="lXk-es-Nxa" secondAttribute="height" multiplier="1:1" id="vbO-az-nAK"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="jze-w1-3Cw">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jze-w1-3Cw">
                                 <rect key="frame" x="0.0" y="344" width="414" height="518"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Ingredients and Quantity" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rtq-lp-EKd">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="188"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" priority="750" constant="150" id="Ian-5e-SXm"/>
+                                            <constraint firstAttribute="height" priority="750" constant="200" id="Ian-5e-SXm"/>
                                         </constraints>
-                                        <color key="textColor" red="0.62352941179999999" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Instructions" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Mcn-lg-CSE">
-                                        <rect key="frame" x="0.0" y="203" width="414" height="315"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <color key="textColor" red="0.62352941179999999" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="0.0" y="200" width="414" height="318"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
@@ -170,7 +170,7 @@
                             <constraint firstItem="PeF-Q8-gcy" firstAttribute="centerX" secondItem="cdV-hN-Oc3" secondAttribute="centerX" id="X8d-bC-XDn"/>
                             <constraint firstItem="PeF-Q8-gcy" firstAttribute="top" secondItem="80M-nE-FQy" secondAttribute="top" id="Z1q-LS-Ypi"/>
                             <constraint firstItem="jze-w1-3Cw" firstAttribute="leading" secondItem="80M-nE-FQy" secondAttribute="leading" id="gYe-UU-Ejf"/>
-                            <constraint firstItem="80M-nE-FQy" firstAttribute="bottom" secondItem="jze-w1-3Cw" secondAttribute="bottom" id="mfr-Mb-aVP"/>
+                            <constraint firstAttribute="bottom" secondItem="jze-w1-3Cw" secondAttribute="bottom" constant="34" id="mfr-Mb-aVP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="80M-nE-FQy"/>
                     </view>
@@ -180,11 +180,36 @@
                         <outlet property="drinkNameLabel" destination="PeF-Q8-gcy" id="rtL-TP-tZ0"/>
                         <outlet property="imageView" destination="lXk-es-Nxa" id="ctG-ph-0Rj"/>
                         <outlet property="instructionsTextView" destination="Mcn-lg-CSE" id="mK4-nZ-Fbf"/>
+                        <outlet property="loadingView" destination="Ezs-iy-uNL" id="tpc-gU-KqN"/>
+                        <outlet property="shineView" destination="chb-qs-4j8" id="8z7-WH-ai2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aKt-oa-JcN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="Ezs-iy-uNL">
+                    <rect key="frame" x="0.0" y="0.0" width="408" height="887"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2909" translatesAutoresizingMaskIntoConstraints="NO" id="RqK-Su-LHs">
+                            <rect key="frame" x="0.0" y="0.0" width="408" height="887"/>
+                        </imageView>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="chb-qs-4j8">
+                            <rect key="frame" x="0.0" y="835" width="408" height="52"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <accessibility key="accessibilityConfiguration" identifier="LoadingView"/>
+                    <constraints>
+                        <constraint firstItem="RqK-Su-LHs" firstAttribute="top" secondItem="Ezs-iy-uNL" secondAttribute="top" id="MkJ-Of-mNs"/>
+                        <constraint firstItem="RqK-Su-LHs" firstAttribute="leading" secondItem="Ezs-iy-uNL" secondAttribute="leading" id="dgS-X9-Xyk"/>
+                        <constraint firstAttribute="trailing" secondItem="RqK-Su-LHs" secondAttribute="trailing" id="eZY-Tb-i3P"/>
+                        <constraint firstAttribute="bottom" secondItem="RqK-Su-LHs" secondAttribute="bottom" id="gxG-E1-TeE"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="oO4-8h-0Zm"/>
+                </view>
             </objects>
-            <point key="canvasLocation" x="1017" y="309"/>
+            <point key="canvasLocation" x="1677" y="230"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RyS-fc-ega">
@@ -210,10 +235,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="vOk-Bd-udO"/>
-        <segue reference="cNu-h5-eYi"/>
+        <segue reference="y4x-Gq-QuQ"/>
+        <segue reference="pJW-yO-XUd"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="2909" width="4646" height="3717"/>
         <image name="Ingredient" width="320" height="73"/>
         <image name="LetterWhite" width="320" height="73"/>
         <image name="Name" width="320" height="73"/>
